<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hintergrund">


    <TextView

        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="55sp"
        android:text="@string/Tetris"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/relativeLayout">


    <Button
        android:id="@+id/PlayButton"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="88dp"
        android:textSize="28sp"
        android:text="@string/ClassicButton"
        android:onClick="playClick"
        android:textAllCaps="false" />
       <!-- android:background="@drawable/buttonframe1" -->





        <!--
            <Button
                android:id="@+id/LevelButton"
                android:layout_width="200dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/PlayButton"
                android:layout_marginTop="65dp"
                android:layout_marginLeft="88dp"
                android:textSize="28sp"
                android:text="@string/LevelButton"
                android:onClick="levelClick"
                android:textAllCaps="false"

                />
        -->
            </RelativeLayout>


            <Button
                android:id="@+id/MenuButton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/Menu"
                android:onClick="openMenu"
                android:layout_below="@+id/relativeLayout"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"

                />

            <Button
                android:id="@+id/ExitButton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/ExitButton"
                android:layout_below="@+id/MenuButton"
                android:layout_centerHorizontal="true"
                android:onClick="ExitButtonClick"
                android:textAllCaps="false"

                />


        </RelativeLayout>